Revision history for Perl extension Nagios::Generator::TestConfig.

0.15  Sun Nov 15 16:56:04 CET 2009
	- added possibility to override all host / service settings
	- rewritten host / service plugins in perl
	- moved service / hostplugin data to extra module

0.14  Fri Nov 13 21:42:55 CET 2009
	- added possibility to override all nagios.cfg settings
	- added Test::Perl::Critic tests
	- added Test::Pod::Coverage tests

0.13  Tue Nov 10 09:35:29 CET 2009
	- fixed tests, now uses File::Which

0.12  Sat Nov  7 14:37:37 CET 2009
	- changed way of passing options

0.11  Thu Nov  5 23:57:17 CET 2009
	- fixed tests on solaris

0.10  Wed Nov  4 20:15:25 CET 2009
	- initial release, generates working nagios config

0.01  Tue Nov  3 18:45:19 2009
	- original version; created by h2xs 1.23 with options
		-A -X -n Nagios::Generator::TestConfig
