@@ -4,6 +4,7 @@ Revision history for Perl extension Nagios::Generator::TestConfig.
 	- added possibility to override all host / service settings
 	- rewritten host / service plugins in perl
 	- moved service / hostplugin data to extra module
+	- added sample host / servicegroups
 
 0.14  Fri Nov 13 21:42:55 CET 2009
 	- added possibility to override all nagios.cfg settings
